# Co-Scientist

./: .bazelrc  .env.example  .gitignore  AGENTS.md  BUILD.bazel  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.mcp  LICENSE  MODULE.bazel  Makefile  OWNERS  PLAN.md  README.md  TASKS.md  pylintrc  requirements.txt  vercel.json
.claude/: launch.json
app/: .env.example  BUILD.bazel  Makefile  README.md  docker-compose.yml  pyproject.toml
app/app/: __init__.py  citations.py  config.py  elo.py  engine_adapter.py  geo.py  i18n.py  main.py  mock_workflow.py  run_modes.py  runs.py  safety.py  seed.py  store.py
app/docker/: Dockerfile.api  entrypoint.sh
app/frontend/: .dockerignore  DESIGN.md  README.md  eslint.config.cjs  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
app/frontend/public/: llms.txt  manifest.webmanifest  robots.txt  sitemap.xml
app/frontend/scripts/: prerender.mjs
app/frontend/src/: index.css  main.tsx  test-setup.ts
app/frontend/src/api/: offline_runs.ts  runs.test.ts  runs.ts
app/frontend/src/assets/: logo-preview.html
app/frontend/src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx  error_boundary.test.tsx  error_boundary.tsx
app/frontend/src/hooks/: useMediaQuery.ts  useMessages.test.ts  useMessages.ts  useRunStream.test.ts  useRunStream.ts  use_media_query.ts  use_messages.test.ts  use_messages.ts  use_run_stream.ts
app/frontend/src/i18n/: LocaleContext.tsx  detect.ts  dictionaries.ts  i18n.test.ts  index.ts  translate.ts  types.ts
app/frontend/src/lib/: clientId.test.ts  clientId.ts  format_abstract.test.ts  format_abstract.ts  sanitize_html.test.ts  sanitize_html.ts  smooth_scroll.ts  text.test.ts  text.ts  theme.test.ts  theme.ts
app/frontend/src/md3/: MdDialog.test.tsx  MdDialog.tsx  MdTabs.test.tsx  MdTabs.tsx  md_dialog.test.tsx  md_tabs.test.tsx  types.d.ts
app/frontend/src/public/: DemoPage.tsx  LandingPage.tsx  NoIndex.test.tsx  NoIndex.tsx  NotFoundPage.test.tsx  NotFoundPage.tsx  PublicLinkButton.test.tsx  PublicLinkButton.tsx  Seo.tsx  demoManifest.ts  demo_manifest.ts  demo_page.tsx  landing_page.tsx  no_index.test.tsx  no_index.tsx  not_found_page.test.tsx  not_found_page.tsx  public_link_button.test.tsx  public_link_button.tsx  seo.tsx
app/frontend/src/styles/: diagnostics.css  final_interactions.css  home_composer.css  home_empty_attachments.css  home_fidelity.css  home_viewport.css  index.css  legacy_cascade_overrides.css  light_mode_parity.css  material_web_fixes.css  public_content.css  recents_cards.css  reference_chat_setup.css  reference_home.css  reference_responsive.css  reference_results.css  reference_shell.css  reference_surface.css  responsive_shell.css  shell_alignment.css  sidebar_state.css  tooltips.css  workbench_runs.css  workbench_shell.css
app/frontend/src/workbench/: Layout.tsx  ThemeContext.tsx  WorkbenchApp.tsx  layout.test.tsx  layout.tsx  log_context.tsx  run_spec.test.ts  run_spec.ts  theme_context.tsx  tooltip.ts  workbench_app.tsx
app/tests/: __init__.py  conftest.py  test_citations.py  test_durability.py  test_elo.py  test_engine_drain.py  test_evolution.py  test_health.py  test_i18n.py  test_messages.py  test_mock_workflow.py  test_qa_grounding.py  test_runs.py  test_runs_edge.py  test_safety.py  test_store.py
engine/: .gitignore  BUILD.bazel  README.md  pyproject.toml
engine/dev/: README.md  evaluate_cache.py  logging_utils.py  run_generate_lit_tools_isolation.py  run_generate_standalone.py  run_lit_review_standalone.py  run_supervisor_standalone.py  state_helpers.py
engine/docs/: ARCHITECTURE.md  GENERATION_MODES.md  LOGGING.md  MCP_INTEGRATION.md  configuration.md  development.md  domain-customization.md  generation-modes.md  literature_review_tools_configuration.md  logging.md  mcp-integration.md
engine/examples/: run.py
engine/mcp_server/: .env.example  BUILD.bazel  OWNERS  README.md  __init__.py  config.py  literature_review.py  models.py  pyproject.toml  server.py  text_extraction.py
engine/mcp_server/tests/: test_openalex.py
engine/mcp_server/tools/indra_cogex/: __init__.py  associations.py  client.py  drug_clinical.py  enrichment.py  pathways.py  statements.py
engine/mcp_server/tools/lit_review/: __init__.py  openalex_search.py  pubmed_search_with_fulltext.py  search_pubmed.py
engine/src/co_scientist/: __init__.py  cache.py  console.py  constants.py  exceptions.py  generator.py  llm.py  mcp_client.py  models.py  prompts.py  schemas.py  state.py
engine/src/co_scientist/config/: __init__.py  registry.py  schema.py
engine/src/co_scientist/nodes/: __init__.py  deep_verification.py  evolve.py  generate.py  literature_review.py  literature_review_helpers.py  meta_review.py  proximity.py  ranking.py  reflection.py  reflection_helpers.py  research_overview.py  review.py  supervisor.py
engine/src/co_scientist/prompts/: deep_verification.md  evolution.md  generation_after_debate.md  generation_debate_and_literature.md  generation_draft_with_tools.md  meta_review.md  ranking.md  reflection_observations.md  research_overview.md  review.md  review_batch.md  supervisor.md
engine/src/co_scientist/tools/: __init__.py  literature.py  provider.py  registry.py  response_parser.py
engine/src/open_coscientist/: __init__.py  constants.py
engine/src/open_coscientist/config/: tools.yaml
engine/tests/: __init__.py  _state.py  conftest.py  test_cache.py  test_citations.py  test_config_registry.py  test_coordinator.py  test_deep_verification.py  test_elo.py  test_evolve.py  test_generation.py  test_generation_cache.py  test_generator.py  test_literature_review.py  test_literature_review_helpers.py  test_literature_tools.py  test_llm.py  test_llm_wrappers.py  test_mcp_client.py  test_meta_review.py  test_meta_review_threading.py  test_models.py  test_papers.py  test_parsers.py  test_prompts.py  test_provider.py  test_proximity.py  test_ranking.py  test_reflection.py  test_reflection_helpers.py  test_research_overview.py  test_review.py  test_schemas.py  test_state_reducer.py  test_supervisor.py
(+658 files in other folders)
