# Copyright 2026 The Co-Scientist Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Root package for the AI Co-Scientist workspace.
#
# Bazel is additive scaffolding here: the authoritative build and deploy path
# remains pip/setuptools for the Python packages and Vite for the frontend.
# This file exists so that the consolidated requirements lock referenced from
# MODULE.bazel (//:requirements.txt) resolves to a real package target.

package(default_visibility = ["//visibility:public"])

exports_files([
    "requirements.txt",
])
