# Copyright 2026 The Co-Scientist Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Bzlmod module definition for the AI Co-Scientist workspace.

These Bazel files are additive: the canonical build and deploy path is still
pip/setuptools (Python) and Vite (frontend). The module is pinned to Python
3.12 because the reference MCP server (//engine/mcp_server) requires it and the
engine and viewer are both 3.12-compatible.
"""

module(
    name = "co_scientist",
    version = "0.2.0",
)

bazel_dep(name = "rules_python", version = "1.5.1")

# Hermetic CPython 3.12 toolchain.
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.12")
python.toolchain(python_version = "3.12")
use_repo(python, "python_3_12", "pythons_hub")

register_toolchains("@pythons_hub//:all")

# Third-party PyPI dependencies, resolved from the consolidated requirements
# lock and exposed through the @pypi hub repository.
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")
