# Copyright 2026 The Co-Scientist Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Build targets for co-scientist-viewer, the FastAPI + SSE backend that wraps
# the co-scientist-engine for live hypothesis-generation runs. The package is
# importable as `app`; the engine is wired through the first-party source label
# //engine:co_scientist rather than through pip.

load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "app",
    srcs = glob(
        ["app/**/*.py"],
        exclude = ["app/main.py"],
    ),
    data = glob(["app/py.typed"]),
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "//engine:co_scientist",
        requirement("fastapi"),
        requirement("uvicorn"),
        requirement("python-dotenv"),
        requirement("pydantic"),
        requirement("pydantic-settings"),
    ],
)

# Uvicorn entry point: `app.main:app` is launched from the module's __main__
# guard via uvicorn.run(...).
py_binary(
    name = "server",
    srcs = ["app/main.py"],
    imports = ["."],
    main = "app/main.py",
    visibility = ["//visibility:public"],
    deps = [
        ":app",
        requirement("fastapi"),
        requirement("uvicorn"),
    ],
)
