[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "co-scientist-viewer"
version = "0.1.0"
description = "Web application for running and monitoring the AI Co-Scientist multi-agent research system. Provides real-time tracking of hypothesis generation, review, ranking, evolution, and iterations."
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "co-scientist-engine>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "yapf>=0.43.0",
    "pylint>=3.3",
    "mypy>=1.5.0",
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["py.typed"]

# Pixi-specific configuration (https://pixi.sh)
# Pixi reads [project.dependencies] and [project.optional-dependencies] above automatically.
# Only pixi-specific overrides and extras go here.
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.tasks]
dev = "python -m uvicorn app.main:app --reload --reload-dir app --host 0.0.0.0 --port 8008"
start = "python -m uvicorn app.main:app --host 0.0.0.0 --port 8008"
test = "pytest"
format = "yapf -ir app tests"
lint = "pylint --rcfile=../pylintrc app tests"
typecheck = "mypy ."

[tool.pixi.dependencies]
python = ">=3.10,<3.13"

[tool.pixi.pypi-dependencies]
co-scientist-viewer = { path = ".", editable = true }

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }

[tool.yapf]
based_on_style = "google"
column_limit = 80

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["co_scientist", "co_scientist.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
