# Copyright 2026 The Co-Scientist Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Build target for co-scientist-engine, the LangGraph-based multi-agent
# hypothesis-generation library. The package is importable as `co_scientist`
# with the `src` directory on the import path.

load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "co_scientist",
    srcs = glob(["src/co_scientist/**/*.py"]),
    data = glob([
        "src/co_scientist/prompts/*.md",
        "src/co_scientist/config/*.yaml",
        "src/co_scientist/config/examples/*.yaml",
        "src/co_scientist/py.typed",
    ]),
    imports = ["src"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("langgraph"),
        requirement("langchain-core"),
        requirement("langchain-mcp-adapters"),
        requirement("langsmith"),
        requirement("litellm"),
        requirement("typing-extensions"),
        requirement("rich"),
        requirement("jsonschema"),
        requirement("pyyaml"),
    ],
)
