# Copyright 2026 The Co-Scientist Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Build targets for co-scientist-mcp-server, the reference FastMCP server that
# exposes PubMed and INDRA CoGex literature-review tools. The package is
# importable as `mcp_server`, so the import root is the parent (engine/)
# directory. Requires the Python 3.12 toolchain pinned in MODULE.bazel.

load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "mcp_server_lib",
    srcs = glob(
        [
            "*.py",
            "tools/**/*.py",
        ],
        exclude = ["server.py"],
    ),
    data = glob(["py.typed"]),
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = [
        requirement("fastmcp"),
        requirement("fastapi"),
        requirement("httpx"),
        requirement("beautifulsoup4"),
        requirement("lxml"),
        requirement("biopython"),
        requirement("python-dotenv"),
        requirement("uvicorn"),
    ],
)

# Uvicorn entry point: `mcp_server.server:app` is launched from the module's
# __main__ guard via uvicorn.run(...).
py_binary(
    name = "server",
    srcs = ["server.py"],
    imports = [".."],
    main = "server.py",
    visibility = ["//visibility:public"],
    deps = [
        ":mcp_server_lib",
        requirement("uvicorn"),
        requirement("fastapi"),
    ],
)
